--- a/app/src/main/res/layout/fragment_inscription.xml
+++ b/app/src/main/res/layout/fragment_inscription.xml
@@ -155,4 +155,12 @@
         android:id="@+id/submit"
         android:layout_gravity="center">
     </Button>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/message"
+        android:text=""
+        android:textAlignment="center"
+        android:layout_gravity="center">
+    </TextView>
 </LinearLayout>
